# manager-jarvis

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  Dockerfile  README.md  bulid.md
.github/workflows/: build-offline-image.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: audit_logs.py  auth.py  containers.py  images.py  router.py  stacks.py  system.py  tasks.py
apps/api/app/core/: audit.py  config.py  deps.py  security.py
apps/api/app/db/: init_db.py  session.py
apps/api/app/models/: __init__.py  audit_log.py  system_setting.py  task.py  user.py
apps/api/app/schemas/: audit.py  auth.py  container.py  image.py  stack.py  system.py  task.py
apps/api/app/services/: docker_service.py  git_service.py  proxy_service.py  stack_service.py  task_service.py
apps/api/app/utils/: confirm.py
apps/api/tests/: conftest.py  test_audit_logs_api.py  test_auth_api.py  test_config.py  test_confirm_utils.py  test_containers_api.py  test_docker_service_containers.py  test_frontend_static.py  test_git_image_api.py  test_healthz.py  test_images_api.py  test_proxy_service.py  test_stack_service_stream.py  test_stacks_api.py  test_system_proxy_api.py  test_task_load_url_proxy.py  test_task_logging.py  test_tasks_api.py
apps/web/: package-lock.json  package.json  vitest.config.ts
apps/web/app/: globals.css  (+1 more)
deploy/compose/: docker-compose.offline.yml  docker-compose.yml
deploy/scripts/: rebuild-and-up.sh  rebuild-image.sh  rebuild-tar.sh
docs/: API.md  FEATURE_MATRIX.md  WEB.md
(+27 files in other folders)
